Base GUI added